fixtures/cs-jwt-01/good/no-jsonwebtoken.ts
function decode(token: string) {
	return token.split(".")[1];
}

export function readToken(token: string) {
	return decode(token);
}
