fixtures/cs-jwt-01/bad/named-import-decode-only.ts
import { decode } from "jsonwebtoken";

export function readToken(token: string) {
	return decode(token);
}
